--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 if(obj.exp<fecha){
                     localStorage.removeItem("AccessToken");
                 }else{
-                    window.location.href="principal.html";
+                    window.location.href="dashboard.html";
                 }
             }
         });
